fix: add additional checks in DeleteProductVariant function
This commit introduces two additional conditions in the DeleteProductVariant function. The first check ensures that the product has more than one variant before attempting deletion to prevent unintentional removal of the last variant. The second check verifies the existence of the specified variant ID before proceeding with the deletion. These enhancements improve the reliability of the DeleteProductVariant function and protect against edge cases that may lead to unexpected behaviour.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ core/db/backup/
 # Ignore any file in the migrations directory
 core/db/migrations/*
 
+core/test/jsonExample/other
 
 # # Ignore binaries
 # *.exe
