fix: some fixes

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "rewrites": [
-      { "source": "/(.*)", "destination": "https://github.com/jyotirmoydotdev/openfy/" }
+      { "source": "/(.*)", "destination": "/index.html" }
     ]
   }
   
